force-app/main/default/objects/Apttus_Billing__LegalEntityTemplateSettingEntry__c/Apttus_Billing__LegalEntityTemplateSettingEntry__c.object-meta.xml
<CustomObject>
    <label>Legal Entity Template Setting Entry</label>
    <nameField>
        <displayFormat>LTS-{00000000}</displayFormat>
        <label>Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Entity Template Setting Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>