force-app/main/default/objects/Apttus_Billing__LegalEntityTemplateSettingEntry__c/fields/Apttus_Billing__DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DeliveryType__c</fullName>
    <description>This indicates the type of delivery method to use when delivering Billing documents to this Legal Entity.</description>
    <inlineHelpText>This field indicates the delivery method for an attachment for the specified Document Type.</inlineHelpText>
    <label>Delivery Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>