force-app/main/default/objects/Apttus_Billing__LegalEntityTemplateSettingEntry__c/fields/Apttus_Billing__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DocumentType__c</fullName>
    <description>The type of the attachment object this setting pertains.</description>
    <inlineHelpText>Type of attachment object this setting pertains to. Eg: Invoice</inlineHelpText>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Split Invoice</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Wallet Credit</fullName>
            </value>
            <value>
                <fullName>Dunning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>