force-app/main/default/objects/Apttus_Billing__LegalEntityTemplateSettingEntry__c/fields/Apttus_Billing__EmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EmailTemplateName__c</fullName>
    <description>Name of the Email Template to use for Email delivery.</description>
    <inlineHelpText>Enter the name of the Email Template to use when sending an Email for the specified Document Type.</inlineHelpText>
    <label>Email Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>