force-app/main/default/objects/Apttus_Billing__LegalEntityTemplateSettingEntry__c/fields/Apttus_Billing__LegalEntityId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LegalEntityId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associated legal entity eg. US-NY</description>
    <inlineHelpText>Select the Legal Entity for which these Template Settings pertain to.</inlineHelpText>
    <label>Legal Entity</label>
    <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
    <relationshipName>LegalEntityTemplateSettingEntries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>